--- a/.github/workflows/xla_ci.yml
+++ b/.github/workflows/xla_ci.yml
@@ -8,10 +8,8 @@ on:
   workflow_dispatch:
 
 env:
-  # Default image from openxlaUtils.groovy
+  # Default image
   IMAGE_NAME: "rocm/tensorflow-build@sha256:7cd444ac48657fee2f5087fbda7766266704d3f8fb2299f681952ae4eabed060"
-  # Default branch from Jenkins parameters
-  ROC_AUTOMATION_BRANCH: "jenkins-pipelines"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -19,7 +17,6 @@ concurrency:
 
 jobs:
   # This job generates the test matrix for the 'xla-tests' job
-  # It replicates the Jenkins logic of changing modes based on branch name
   setup:
     runs-on: ubuntu-latest
     outputs:
@@ -63,12 +60,9 @@ jobs:
     name: jax-ut
     # Runs only on PRs to branches containing '0.7.1'
     if: contains(github.base_ref, '0.7.1')
-    runs-on: [self-hosted, gfx90a, alpha2] # Maps to 'gfx90a&&alpha2'
+    runs-on: [self-hosted, gfx90a, alpha2] 
     timeout-minutes: 720 # 12 hours
-    env:
-      # Use a PAT with repo access
-      GH_TOKEN: ${{ secrets.ROCM_REPO_PAT }}
-    
+
     steps:
       - name: Clean up node (pre-run)
         run: |
@@ -88,16 +82,7 @@ jobs:
         with:
           repository: ROCm/jax
           ref: ${{ github.base_ref }} # Uses the PR target branch
-          token: ${{ env.GH_TOKEN }}
           path: jax
-
-      - name: Clone ROCm/rocAutomation
-        uses: actions/checkout@v4
-        with:
-          repository: ROCm/rocAutomation
-          ref: ${{ env.ROC_AUTOMATION_BRANCH }}
-          token: ${{ env.GH_TOKEN }}
-          path: rocAutomation
 
       - name: Run XLA docker container
         id: docker_run
@@ -117,22 +102,10 @@ jobs:
               -v "${{ github.workspace }}/${ARTIFACTS_DIR}:/tf/pkg" \
               -v "${{ github.workspace }}/xla:/tf/xla" \
               -v "${{ github.workspace }}/jax:/tf/jax" \
-              -v "${{ github.workspace }}/rocAutomation/resources/certificates:/tf/certificates" \
               -v "/tmp/bazel_disk_cache:/tf/disk_cache_jax" \
-              --env GITHUB_TOKEN=${{ env.GH_TOKEN }} \
               ${{ env.IMAGE_NAME }})
           
           echo "container_id=$CONTAINER_ID" >> $GITHUB_OUTPUT
-
-      - name: Inject Git Credentials
-        run: |
-          cat > .netrc <<EOF
-          machine github.com
-          login x-access-token
-          password ${{ env.GH_TOKEN }}
-          EOF
-          chmod 600 .netrc
-          docker cp .netrc ${{ steps.docker_run.outputs.container_id }}:/root/.netrc
 
       - name: Run jax unit-tests
         id: run_tests
@@ -179,7 +152,6 @@ jobs:
     runs-on: [self-hosted, ${{ matrix.labels }}]
     timeout-minutes: 720
     env:
-      GH_TOKEN: ${{ secrets.ROCM_REPO_PAT }}
       MATRIX_MODE: ${{ matrix.mode }}
       MATRIX_PLATFORM_NAME: ${{ matrix.platform_name }}
 
@@ -201,14 +173,6 @@ jobs:
         with:
           path: xla
           
-      - name: Clone ROCm/rocAutomation
-        uses: actions/checkout@v4
-        with:
-          repository: ROCm/rocAutomation
-          ref: ${{ env.ROC_AUTOMATION_BRANCH }}
-          token: ${{ env.GH_TOKEN }}
-          path: rocAutomation
-
       - name: Run XLA docker container
         id: docker_run
         run: |
@@ -226,22 +190,10 @@ jobs:
               --cap-add=SYS_PTRACE --security-opt seccomp=unconfined \
               -v "${{ github.workspace }}/${ARTIFACTS_DIR}:/tf/pkg" \
               -v "${{ github.workspace }}/xla:/tf/xla" \
-              -v "${{ github.workspace }}/rocAutomation/resources/certificates:/tf/certificates" \
               -v "/tmp/bazel_disk_cache:/tf/disk_cache" \
-              --env GITHUB_TOKEN=${{ env.GH_TOKEN }} \
               ${{ env.IMAGE_NAME }})
           
           echo "container_id=$CONTAINER_ID" >> $GITHUB_OUTPUT
-
-      - name: Inject Git Credentials
-        run: |
-          cat > .netrc <<EOF
-          machine github.com
-          login x-access-token
-          password ${{ env.GH_TOKEN }}
-          EOF
-          chmod 600 .netrc
-          docker cp .netrc ${{ steps.docker_run.outputs.container_id }}:/root/.netrc
 
       - name: Test ${{ matrix.platform_name }} arch (${{ matrix.mode_name }})
         id: run_tests
