--- a/xla/backends/gpu/runtime/BUILD
+++ b/xla/backends/gpu/runtime/BUILD
@@ -1813,6 +1813,7 @@ xla_test(
         "gpu": [
             "multi_gpu_h100",
             "multi_gpu",
+            "local",
             "no_oss",
         ],
     },
