--- a/xla/tests/BUILD
+++ b/xla/tests/BUILD
@@ -2724,6 +2724,7 @@ xla_test(
     backend_tags = {
         "gpu": [
             "multi_gpu",
+            "local",
             "no_oss",
         ],
     },
