--- a/xla/tools/multihost_hlo_runner/BUILD
+++ b/xla/tools/multihost_hlo_runner/BUILD
@@ -233,6 +233,7 @@ xla_test(
         "gpu": [
             "multi_gpu_h100",
             "multi_gpu",
+            "local",
             "no_oss",
             "nomsan",
         ],
