Make collective ops test local

--- a/xla/tests/BUILD
+++ b/xla/tests/BUILD
@@ -2625,6 +2625,7 @@ xla_test(
     backend_tags = {
         "gpu": [
             "multi_gpu",
+            "local",
             "no_oss",
         ],
         "cpu": [
