--- a/.github/workflows/xla_ci.yml
+++ b/.github/workflows/xla_ci.yml
@@ -61,7 +61,7 @@ jobs:
     # Runs only on PRs to branches containing '0.7.1'
     if: contains(github.base_ref, '0.7.1')
     # This is always multigpu test, so it runs on the multigpu runner
-    runs-on: [self-hosted, linux-mi355-4] 
+    runs-on: linux-mi355-4
     timeout-minutes: 720 # 12 hours
 
     steps:
