--- a/xla/tools/multihost_hlo_runner/BUILD
+++ b/xla/tools/multihost_hlo_runner/BUILD
@@ -162,6 +162,9 @@ cc_library(
         "//xla/pjrt:pjrt_future",
         "//xla/pjrt:pjrt_layout",
         "//xla/pjrt/distributed:key_value_store_interface",
+        "//xla/tsl/profiler/rpc/client:save_profile",
+        "//xla/tsl/profiler/convert:trace_events_to_json",
+        "//xla/tsl/profiler/convert:xplane_to_trace_events",
         "//xla/runtime/large_hlo_snapshot_serialization:serialization",
         "//xla/service:computation_layout",
         "//xla/service:computation_placer_hdr",
