--- a/.github/workflows/xla_ci.yml
+++ b/.github/workflows/xla_ci.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: linux-mi325-2
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
