--- a/.github/workflows/xla_ci.yml
+++ b/.github/workflows/xla_ci.yml
@@ -29,6 +29,7 @@ jobs:
             --device=/dev/kfd \
             --device=/dev/dri \
             --ipc=host \
+            --pid=host \
             --shm-size=16G \
             --group-add=video \
             --cap-add=SYS_PTRACE \
