2nodes working with xla

--- a/xla/backends/profiler/gpu/BUILD
+++ b/xla/backends/profiler/gpu/BUILD
@@ -434,6 +434,7 @@ cc_library(
   deps = [
     ":svm_wrapper",
     "@com_google_absl//absl/container:flat_hash_map",
+    "@com_google_absl//absl/log",
   ],
   visibility = ["//visibility:public"],
 )
@@ -461,6 +462,8 @@ cc_library(
     "@com_google_absl//absl/status:statusor",
     "@com_google_absl//absl/strings",
     "@com_google_absl//absl/synchronization",
+    "@tsl//tsl/platform:logging",
+    "@com_google_absl//absl/strings:str_format",
   ],
   visibility = ["//visibility:public"],
 )
@@ -927,6 +930,8 @@ cc_test(
         ":rocm_tracer_utils",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
+        "@tsl//tsl/platform:logging",
+        "@com_google_absl//absl/log",
     ],
 )
 
