Mark multigpu tests as such, make them exclusive if executed locally

--- a/xla/tests/BUILD
+++ b/xla/tests/BUILD
@@ -2605,6 +2605,7 @@ xla_test(
         "interpreter",
     ],
     tags = [
+        "multi_gpu",
         "test_migrated_to_hlo_runner_pjrt",
     ],
     deps = [
