--- a/xla/service/BUILD
+++ b/xla/service/BUILD
@@ -283,6 +283,7 @@ cc_library(
 xla_cc_test(
     name = "collective_permute_cycle_test",
     srcs = ["collective_permute_cycle_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":collective_permute_cycle",
         ":source_target_pairs",
@@ -471,6 +472,7 @@ cc_library(
 xla_cc_test(
     name = "collective_pipeliner_test",
     srcs = ["collective_pipeliner_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":collective_pipeliner",
         ":collective_pipeliner_utils",
@@ -681,6 +683,7 @@ xla_cc_test(
     srcs = [
         "sharding_propagation_test.cc",
     ],
+    tags = ["multi_gpu"],
     deps = [
         ":sharding_propagation",
         "//xla:shape_util",
@@ -730,6 +733,7 @@ xla_cc_test(
     srcs = [
         "sharding_remover_test.cc",
     ],
+    tags = ["multi_gpu"],
     deps = [
         ":sharding_remover",
         "//xla/hlo/ir:hlo",
@@ -1308,6 +1312,7 @@ cc_library(
 xla_cc_test(
     name = "p2p_schedule_preparation_test",
     srcs = ["p2p_schedule_preparation_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":p2p_schedule_preparation",
         "//xla:util",
@@ -2389,6 +2394,7 @@ cc_library(
 xla_cc_test(
     name = "reduce_scatter_combiner_test",
     srcs = ["reduce_scatter_combiner_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":reduce_scatter_combiner",
         "//xla/hlo/ir:hlo",
@@ -2427,6 +2433,7 @@ cc_library(
 xla_cc_test(
     name = "all_reduce_simplifier_test",
     srcs = ["all_reduce_simplifier_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":all_reduce_simplifier",
         ":hlo_module_config",
@@ -2464,6 +2471,7 @@ cc_library(
 xla_cc_test(
     name = "all_gather_simplifier_test",
     srcs = ["all_gather_simplifier_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":all_gather_simplifier",
         ":pattern_matcher",
@@ -2497,6 +2505,7 @@ cc_library(
 xla_cc_test(
     name = "reduce_scatter_decomposer_test",
     srcs = ["reduce_scatter_decomposer_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":collective_ops_utils",
         ":reduce_scatter_decomposer",
@@ -2530,6 +2539,7 @@ cc_library(
 xla_cc_test(
     name = "reduce_scatter_reassociate_test",
     srcs = ["reduce_scatter_reassociate_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":hlo_verifier",
         ":reduce_scatter_reassociate",
@@ -5241,6 +5251,7 @@ cc_library(
 xla_cc_test(
     name = "collective_ops_utils_test",
     srcs = ["collective_ops_utils_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":collective_ops_utils",
         ":collective_permute_cycle",
@@ -5573,6 +5584,7 @@ cc_library(
 xla_cc_test(
     name = "scatter_simplifier_test",
     srcs = ["scatter_simplifier_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":scatter_simplifier",
         "//xla:literal",
@@ -5702,6 +5714,7 @@ cc_library(
 xla_cc_test(
     name = "batched_gather_scatter_normalizer_test",
     srcs = ["batched_gather_scatter_normalizer_test.cc"],
+    tags = ["multi_gpu"],
     deps = [
         ":batched_gather_scatter_normalizer",
         "//xla/hlo/testlib:hlo_hardware_independent_test_base",
