--- a/xla/tests/BUILD
+++ b/xla/tests/BUILD
@@ -2654,6 +2654,7 @@ xla_test(
         "interpreter",
     ],
     tags = [
+        "multi_gpu",
         "test_migrated_to_hlo_runner_pjrt",
     ],
     deps = [
