--- a/.github/workflows/rocm_ci.yml
+++ b/.github/workflows/rocm_ci.yml
@@ -20,14 +20,14 @@ jobs:
       - uses: actions/checkout@v4
 
       # Second repo checkout via SSH
-      - name: Checkout rocAutomation repo
+      - name: Checkout xla repo
         uses: actions/checkout@v4
-        with:
-          repository: ROCm/rocAutomation
-          ref: jenkins-pipelines
-          path: rocAutomation
-          ssh-strict: false
-          debug: true
+
+      - name: Checkout rocAutomation manually via SSH
+        run: |
+          mkdir -p rocAutomation
+          export GIT_SSH_COMMAND='ssh -o StrictHostKeyChecking=no' 
+          git clone --branch jenkins-pipelines git@github.com:ROCm/rocAutomation.git rocAutomation
 
       # Run container
       - name: Run tests in custom container
