Add missing parallel_gpu_execute target

--- a/build_tools/rocm/BUILD
+++ b/build_tools/rocm/BUILD
@@ -52,3 +52,10 @@ sh_binary(
     data = [":sanitizer_ignore_lists"],
     visibility = ["//visibility:public"],
 )
+
+sh_binary(
+    name = "parallel_gpu_execute",
+    srcs = ["parallel_gpu_execute.sh"],
+    data = [":sanitizer_ignore_lists"],
+    visibility = ["//visibility:public"],
+)
