--- a/xla/service/gpu/transforms/BUILD
+++ b/xla/service/gpu/transforms/BUILD
@@ -6,7 +6,7 @@ load(
     "if_gpu_is_configured",
 )
 load("//xla/tests:build_defs.bzl", "xla_test")
-load("//xla/tsl:tsl.bzl", "if_google", "if_oss")
+load("//xla/tsl:tsl.bzl", "if_google")
 load(
     "//xla/tsl/platform:build_config_root.bzl",
     "tf_gpu_tests_tags",
@@ -688,9 +688,6 @@ cc_library(
 xla_test(
     name = "cudnn_fused_conv_rewriter_test",
     srcs = ["cudnn_fused_conv_rewriter_test.cc"],
-    tags = [
-        "cuda-only", # TODO(rocm): Until #12613 is fixed.
-    ],
     backend_tags = {
         "a100": [
             "noasan",
@@ -701,6 +698,9 @@ xla_test(
         "a100",
     ],
     shard_count = 10,
+    tags = [
+        "cuda-only",  # TODO(rocm): Until #12613 is fixed.
+    ],
     deps = [
         ":conv_rewriter",
         ":cudnn_fused_conv_rewriter",
