some refactoring & dump snapshot update

--- a/xla/service/gpu/BUILD
+++ b/xla/service/gpu/BUILD
@@ -327,6 +327,7 @@ cc_library(
         ":launch_dimensions",
         ":matmul_utils",
         ":parallel_loop_emitter",
+        ":runtime_intrinsics",
         ":stream_executor_util",
         ":triton_call",
         "//xla:autotuning_proto_cc",
@@ -1536,6 +1537,7 @@ cc_library(
         "//xla/service/gpu/transforms:gemv_rewriter",
         "//xla/service/gpu/transforms:layout_assignment",
         "//xla/service/gpu/transforms:move_copy_to_users",
+        "//xla/service/gpu/transforms:nan_check_inserter",
         "//xla/service/gpu/transforms:nest_gemm_fusion",
         "//xla/service/gpu/transforms:pipelined_p2p_rewriter",
         "//xla/service/gpu/transforms:ragged_all_to_all_canonicalizer",
@@ -1620,6 +1622,7 @@ cc_library(
         "//xla/stream_executor:semantic_version",
         "//xla/stream_executor:stream_executor_h",
         "//xla/tsl/lib/monitoring:counter",
+        "//xla/tsl/util:env_var",
         "//xla/tsl/platform:env",
         "//xla/tsl/platform:errors",
         "//xla/tsl/platform:statusor",
