--- a/xla/backends/gpu/runtime/BUILD
+++ b/xla/backends/gpu/runtime/BUILD
@@ -664,6 +664,7 @@ cc_library(
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/synchronization",
+        "@tsl//tsl/platform:path",
         "@tsl//tsl/platform:logging",
         "@tsl//tsl/platform:statusor",
     ],
