--- a/xla/service/gpu/llvm_gpu_backend/BUILD
+++ b/xla/service/gpu/llvm_gpu_backend/BUILD
@@ -198,6 +198,7 @@ cc_library(
         "@llvm-project//llvm:Scalar",
         "@llvm-project//llvm:Support",
         "@llvm-project//llvm:Target",
+        "@local_config_rocm//rocm:amd_comgr",
         "@tsl//tsl/platform:path",
         "@tsl//tsl/platform:random",
         "@tsl//tsl/profiler/lib:traceme",
