Mark nvshmem tests as cuda-only

--- a/xla/backends/gpu/collectives/BUILD
+++ b/xla/backends/gpu/collectives/BUILD
@@ -522,6 +522,7 @@ xla_test(
             "no_oss",
             "noasan",
             "nomsan",
+            "cuda-only",
         ],
         "nvgpu_any": [
             "broken",
