--- a/xla/service/gpu/BUILD
+++ b/xla/service/gpu/BUILD
@@ -1812,6 +1812,7 @@ cc_library(
         "//xla/service/gpu/transforms:gemm_rewriter",
         "//xla/service/gpu/transforms:gemv_rewriter",
         "//xla/service/gpu/transforms:layout_assignment",
+        "//xla/service/gpu/autotuning:gemm_algorithm_picker",
         "//xla/service/gpu/transforms:move_copy_to_users",
         "//xla/service/gpu/transforms:nest_gemm_fusion",
         "//xla/service/gpu/transforms:ragged_all_to_all_canonicalizer",
