Force rbe incompatible tests to be executed locally

--- a/xla/stream_executor/gpu/BUILD
+++ b/xla/stream_executor/gpu/BUILD
@@ -683,10 +683,13 @@ xla_test(
     name = "gpu_executor_test",
     size = "small",
     srcs = ["gpu_executor_test.cc"],
-    backends = ["gpu"],
+    backends = [
+        "gpu",
+    ],
     local_defines = if_cuda_is_configured(["GOOGLE_CUDA=1"]) + if_rocm_is_configured([
         "TENSORFLOW_USE_ROCM=1",
     ]),
+    tags = ["local"],
     deps = [
         "//xla/service:platform_util",
         "//xla/stream_executor:platform",
