--- a/xla/tests/BUILD
+++ b/xla/tests/BUILD
@@ -3422,6 +3422,7 @@ xla_test(
     },
     shard_count = 50,
     tags = [
+        "local",
         "test_migrated_to_hlo_runner_pjrt",
     ],
     deps = [
